ingress/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: prometheus-stack
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://myapi-service.sky.svc.cluster.local:3000/api/validate"
    nginx.ingress.kubernetes.io/auth-signin: "https://login.api.core.local/login"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-WEBAUTH-USER"
spec:
  ingressClassName: nginx
  rules:
  - host: app.core.local
    http:
      paths:
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
